<resources>
    <string name="welcome_student">Welcome, Student!</string>
    <string name="lets_start_learning">Let’s Start Learning!</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="need_account">Crate an Account?</string>


    <string name="signup_title">Let’s get you Setup!</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_email">Confirm Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_phone">Phone Number</string>
    <string name="btn_create_account">Create new Account</string>


    <string name="interests_title">Your Interests</string>
    <string name="interests_sub">You may select upto 10 topics</string>
    <string name="btn_next">Next</string>


    <string name="hello_user">Hello, %1$s</string>
    <string name="tasks_due">You have %1$d task due</string>
    <string name="generated_by_ai">Generated by AI</string>
    <string name="task_card_title">Generated Task 1</string>
    <string name="task_card_sub">Small Description for the generated Task</string>


    <string name="btn_submit">Submit</string>


    <string name="answered_by_ai">Answered by AI</string>
    <string name="your_results">Your Results</string>
    <string name="btn_continue">Continue</string>
</resources>
