<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/backgroundLight"
    android:gravity="center"
    android:padding="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/welcome_student"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/primaryDarkBlue"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/lets_start_learning"
        android:textSize="16sp"
        android:textColor="@color/primaryDarkBlue"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etUsername"
        android:hint="@string/hint_username"
        android:backgroundTint="@color/primaryBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:backgroundTint="@color/primaryBlue"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/btn_login"
        android:background="@drawable/bg_button_green"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvNeedAccount"
        android:text="@string/need_account"
        android:textColor="@color/primaryDarkBlue"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
